# bevy_plugin_pixelate

./: Cargo.toml  README.md
assets/: pixelated.wgsl
examples/: all-meshes.rs  lil-car.rs  scene.rs
readme/: screenshot-all-meshes.avif  screenshot-lil-car.avif  screenshot-scene.avif
src/: colors.rs  lib.rs  pixelating_plugin.rs  rotators.rs  screenshots.rs
