[package]
name = "gen-04-pixels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["file_watcher"] }
bevy-inspector-egui = "0.22.1"
bevy_asset_loader = { version = "0.19.1", features = ["3d"] }
bevy_xpbd_3d = "0.3"
bevy-scene-hook = "9.0.0"
leafwing-input-manager = "0.11.2"
